Feat. Добавлены бронирования и отзывы. Добавлены тесты для нового функционала и обновлены старые.