@@ -7,10 +7,12 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
-import ru.practicum.shareit.item.dto.CommentViewDTO;
-import ru.practicum.shareit.item.dto.CommentResponseDTO;
-import ru.practicum.shareit.item.dto.ItemWithBookingDTO;
-import ru.practicum.shareit.item.dto.ItemWithCommentsDTO;
+import ru.practicum.shareit.item.dto.comment.CommentResponseDTO;
+import ru.practicum.shareit.item.dto.comment.CommentViewDTO;
+import ru.practicum.shareit.item.dto.item.ItemCreateDTO;
+import ru.practicum.shareit.item.dto.item.ItemResponseDTO;
+import ru.practicum.shareit.item.dto.item.ItemUpdateDTO;
+import ru.practicum.shareit.item.dto.item.ItemWithBookingDTO;
 import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Comment;
@@ -18,53 +20,69 @@ import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.repository.UserRepository;
 import ru.practicum.shareit.user.service.UserService;
 
-import java.time.Instant;
+import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
+import static ru.practicum.shareit.item.mapper.ItemMapper.*;
 import static ru.practicum.shareit.validator.Validator.*;
 
 @SuppressWarnings({"unused"})
 @Service
 @Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
     private final BookingRepository bookingRepository;
     private final CommentRepository commentRepository;
+    private final UserRepository userRepository;
     private final UserService userService;
 
-    private final static int PAGE_SIZE = 20;
-
+    /**
+     * Создание вещи
+     */
     @Override
-    public Item create(Item item) {
-        log.info("Создание вещи для владельца с ID {}: {}", item.getOwnerId(), item.getName());
-        userService.throwIfNotExists(item.getOwnerId());
-        return itemRepository.save(item);
+    @Transactional
+    public ItemResponseDTO create(ItemCreateDTO itemCreateDTO, Long ownerId) {
+        log.info("Создание вещи для владельца с ID {}: {}", ownerId, itemCreateDTO.name());
+        userService.throwIfNotExists(ownerId);
+        return mapToResponseDTO(itemRepository.save(mapToDomain(itemCreateDTO, ownerId)));
     }
 
-    @Transactional(readOnly = true)
+    /**
+     * Получение вещи по ID с комментариями и без бронирований
+     */
     @Override
-    public ItemWithCommentsDTO get(Long id) {
-        log.info("Получение вещи по ID {} с комментариями (без бронирований)", id);
+    public ItemWithBookingDTO get(Long id, Long userId) {
+        log.info("Получение вещи по ID {} с комментариями и без бронирований", id);
         Item item = itemRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Вещь с ID = " + id + " не найдена"));
 
-        // Загружаем все комментарии для этой вещи вместе с авторами за один запрос
-        List<Comment> comments = commentRepository.findByItemIdWithAuthor(id);
+        // Загружаем все комментарии для этой вещи без лишних полей
+        List<CommentResponseDTO> commentDtos = commentRepository.findByItemIdWithAuthor(id);
 
-        // Создаём DTO только с комментариями (без информации о бронированиях).
-        // Маппер использует заранее загруженную вещь вместо comment.getItem()
-        return ItemMapper.mapToItemWithCommentsDTO(item, comments);
+        if (isOwner(id, userId)) {
+            // Загружаем бронирования
+            List<Booking> bookings = bookingRepository.findByItemIdWithItem(id);
+            // Создаём DTO с информацией о бронированиях.
+            return mapToDTOWithBookings(item, bookings, commentDtos);
+        }
+        // Создаём DTO без информации о бронированиях.
+        return mapToDTOWithoutBookings(item, commentDtos);
     }
 
-    @Transactional(readOnly = true)
+    /**
+     * Получение всех вещей владельца с бронированиями и комментариями
+     */
     @Override
     public List<ItemWithBookingDTO> getAllByOwner(Long ownerId) {
         log.info("Получение всех вещей для владельца с ID {} с комментариями", ownerId);
@@ -73,16 +91,11 @@ public class ItemServiceImpl implements ItemService {
         Collection<Item> items = itemRepository.findAllByOwnerId(ownerId);
         log.info("Получен список из {} вещей для владельца с ID {}", items.size(), ownerId);
 
-        if (items.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (items.isEmpty()) return Collections.emptyList();
 
-        // Извлекаем ID вещей
-        List<Long> itemIds = items.stream()
-                .map(Item::getId)
-                .collect(Collectors.toList());
+        List<Long> itemIds = items.stream().map(Item::getId).collect(toList());
 
-        // Загружаем все бронирования для этих вещей
+        // Загружаем бронирования для этих вещей
         List<Booking> bookings = bookingRepository.findByItemIdsWithItem(itemIds);
 
         // Группируем бронирования по ID вещи
@@ -90,57 +103,63 @@ public class ItemServiceImpl implements ItemService {
                 .collect(Collectors.groupingBy(booking -> booking.getItem().getId()));
 
         // Загружаем комментарии с автором и ID вещи за один запрос
-        List<CommentViewDTO> commentViewDtos = commentRepository.findByItemIdsWithAuthorAndItemId(itemIds);
+        List<CommentViewDTO> commentViewDtos = commentRepository.findByItemIdsWithAuthorNameAndItemId(itemIds);
 
         // Группируем комментарии по ID вещи — без N+1, используем itemId из проекции
         Map<Long, List<CommentViewDTO>> commentsByItemId = commentViewDtos.stream()
                 .collect(Collectors.groupingBy(CommentViewDTO::itemId));
 
-        // Собираем итоговый результат
         return items.stream()
                 .map(item -> {
                     List<Booking> itemBookings = bookingsByItemId.getOrDefault(item.getId(), Collections.emptyList());
-                    List<CommentViewDTO> itemCommentViewDtos = commentsByItemId.getOrDefault(item.getId(), Collections.emptyList());
+                    List<CommentViewDTO> itemCommentViews = commentsByItemId.getOrDefault(item.getId(), Collections.emptyList());
 
-                    // Преобразовываем проекции в CommentResponseDTO через маппер
-                    List<CommentResponseDTO> itemCommentDtos = CommentMapper.mapViewToResponseDTOList(itemCommentViewDtos, item);
+                    // Преобразуем через Mapper в DTO
+                    List<CommentResponseDTO> itemCommentDtos = CommentMapper.mapViewToResponseDTOList(itemCommentViews);
 
-                    // Передаём готовые DTO в маппер — преобразование уже выполнено
-                    return ItemMapper.mapToItemWithBookingDTO(item, itemBookings, itemCommentDtos);
+                    return mapToDTOWithBookings(item, itemBookings, itemCommentDtos);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-
-
+    /**
+     * Поиск вещей по тексту
+     */
     @Override
-    public Collection<Item> search(String text) {
+    @Transactional
+    public Collection<ItemResponseDTO> search(String text) {
         log.info("Поиск вещей по тексту: '{}'", text);
 
-        if (text == null || text.trim().isEmpty()) {
-            log.debug("Пустой или null текст для поиска — возвращаем пустой список");
-            return Collections.emptyList();
-        }
-        String searchText = text.trim().toLowerCase();
+        if (text == null || text.trim().isEmpty()) return Collections.emptyList();
+
+        String searchText = text.trim();
         Collection<Item> foundItems = itemRepository.findByText(searchText);
         log.info("По запросу '{}' найдено {} доступных вещей", searchText, foundItems.size());
-        return foundItems;
+        return mapToResponseDTOList(foundItems);
     }
 
+    /**
+     * Обновление вещи
+     */
     @Override
-    public Item update(Long itemId, Item itemUpdate) {
-        log.info("Обновление вещи для владельца с ID: {}", itemUpdate.getOwnerId());
+    @Transactional
+    public ItemResponseDTO update(Long itemId, Long ownerId, ItemUpdateDTO itemUpdate) {
+        log.info("Обновление вещи для владельца с ID: {}", ownerId);
 
         throwIfNotExists(itemId);
-        userService.throwIfNotExists(itemUpdate.getOwnerId());
-        throwIfNotOwner(itemId, itemUpdate.getOwnerId());
+        userService.throwIfNotExists(ownerId);
+        throwIfNotOwner(itemId, ownerId);
 
         Item existingItem = itemRepository.findById(itemId).orElseThrow();
         Item newItem = ItemMapper.updateFromDTO(itemUpdate, existingItem);
-        return itemRepository.save(newItem);
+        return mapToResponseDTO(itemRepository.save(newItem));
     }
 
+    /**
+     * Удаление вещи
+     */
     @Override
+    @Transactional
     public void delete(Long id, Long ownerId) {
         log.info("Удаление вещи с ID {} владельцем с ID {}", id, ownerId);
 
@@ -150,6 +169,27 @@ public class ItemServiceImpl implements ItemService {
         itemRepository.deleteById(id);
     }
 
+    /**
+     * Создание комментария к вещи
+     */
+    @Override
+    @Transactional
+    public CommentResponseDTO createComment(Long itemId, Long userId, String text) {
+        throwIfNotExists(itemId);
+        userService.throwIfNotExists(userId);
+        throwIfNotPastBooker(itemId, userId);
+
+        Item item = itemRepository.getReferenceById(itemId);
+        User user = userRepository.getReferenceById(userId);
+
+        Comment comment = CommentMapper.mapCreateToDomain(text, item, user);
+        return CommentMapper.mapToResponseDTO(commentRepository.save(comment));
+    }
+
+    /**
+     * Проверяет, что вещь существует
+     */
+    @Override
     public void throwIfNotExists(Long id) {
         if (!itemRepository.existsById(id)) {
             String errText = "Вещь с ID = " + id + " не найдена";
@@ -158,40 +198,30 @@ public class ItemServiceImpl implements ItemService {
         }
     }
 
-    @Override
-    public Item getReferenceById(Long itemId) {
-        return itemRepository.getReferenceById(itemId);
-    }
-
-    @Override
-    public Comment createComment(Long itemId, Long userId, String text) {
-        // Вещь должна существовать. Иначе, ошибка 404.
-        throwIfNotExists(itemId);
-        // Пользователь должен существовать, иначе выбросить 404.
-        userService.throwIfNotExists(userId);
-        // добавить проверку, что пользователь, который пишет комментарий, действительно брал вещь в аренду.
-        throwIfNotPastBooker(itemId, userId);
-
-        Item item = itemRepository.getReferenceById(itemId);
-        User user = userService.getReferenceById(userId);
-        return commentRepository.save(CommentMapper.mapCreateToDomain(text, item, user));
-    }
-
-    private void throwIfNotOwner(Long itemId, Long ownerId) {
-        Item item = itemRepository.findById(itemId).orElseThrow();
-        if (!item.getOwnerId().equals(ownerId)) {
-            String errText = String.format(ITEM_PERMISSION_ERR_TEXT, ownerId, itemId);
-            throwUnauthorised(errText);
-        }
-    }
-
     private void throwIfNotPastBooker(Long itemId, Long userId) {
-        Instant now = Instant.now();
-        List<Booking> pastBookings = bookingRepository.findPastBookingsByItemIdAndBookerId(itemId, userId, now);
+        LocalDateTime now = LocalDateTime.now();
+        List<Booking> pastBookings = bookingRepository.findPastApprovedBookingsByItemIdAndBookerId(itemId, userId, now);
 
         if (pastBookings.isEmpty()) {
             throwValidation(COMMENT_CREATE_VALIDATION_ERR_TEXT);
         }
     }
 
+    /**
+     * Проверяет, что пользователь является владельцем вещи
+     */
+    private void throwIfNotOwner(Long itemId, Long ownerId) {
+        if (!isOwner(itemId, ownerId)) {
+            String errText = String.format(ITEM_PERMISSION_ERR_TEXT, ownerId, itemId);
+            throwUnauthorised(errText);
+        }
+    }
+
+    /**
+     * Проверяет, что пользователь является владельцем вещи
+     */
+    private boolean isOwner(Long itemId, Long ownerId) {
+        Item item = itemRepository.findById(itemId).orElseThrow();
+        return item.getOwnerId().equals(ownerId);
+    }
 }
